configure spark configs for local and emr